--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -6,6 +6,7 @@
     "description": "New version of Bloggy which is written on KRuntime",
     "version": "0.1-alpha-*",
     "dependencies": {
+        "Microsoft.AspNet.Http": "0.1-alpha-*"
     },
     "commands": {
         "run": "run server.urls=http://localhost:5003"
@@ -18,6 +19,12 @@
         
         "k10": {
             "dependencies": {
+                "System.Collections": "4.0.0.0",
+                "System.Console": "4.0.0.0",
+                "System.IO": "4.0.0.0",
+                "System.Linq": "4.0.0.0",
+                "System.Runtime": "4.0.20.0",
+                "System.Threading.Tasks": "4.0.10.0"
             }
         }
     }
