--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -6,9 +6,12 @@
     "description": "New version of Bloggy which is written on KRuntime",
     "version": "0.1-alpha-*",
     "dependencies": {
-        "Microsoft.AspNet.Http": "0.1-alpha-*"
+        "Microsoft.AspNet.Http": "0.1-alpha-*",
+        "Microsoft.AspNet.Hosting": "0.1-alpha-*",
+        "Microsoft.AspNet.Server.WebListener": "0.1-alpha-*"
     },
     "commands": {
+        "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
         "run": "run server.urls=http://localhost:5003"
     },
     "configurations": {
