--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -8,7 +8,11 @@
     "dependencies": {
         "Microsoft.AspNet.Http": "0.1-alpha-*",
         "Microsoft.AspNet.Hosting": "0.1-alpha-*",
-        "Microsoft.AspNet.Server.WebListener": "0.1-alpha-*"
+        "Microsoft.AspNet.Server.WebListener": "0.1-alpha-*",
+        "Microsoft.Framework.ConfigurationModel": "0.1-alpha-*",
+        "Microsoft.Framework.ConfigurationModel.Json": "0.1-alpha-*",
+        "Microsoft.Framework.DependencyInjection": "0.1-alpha-*",
+        "Microsoft.AspNet.RequestContainer": "0.1-alpha-build-0519" /* UseServices extension method is inside this */
     },
     "commands": {
         "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
