updated according to aspnetvnext feed. Still not working though.

--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -1,44 +1,42 @@
 {
-    "name": "Kloggy.Web",
-    "authors":[
-        "Tugberk Ugurlu"
-    ],
-    "description": "New version of Bloggy which is written on KRuntime",
-    "version": "0.1-alpha-*",
-    "dependencies": {
-        "Kestrel": "1.0.0-alpha3",
-        "Microsoft.AspNet.Diagnostics": "1.0.0-alpha3",
-        "Microsoft.AspNet.StaticFiles": "1.0.0-alpha3",
-        "Microsoft.AspNet.Mvc": "6.0.0-alpha3",
-        
-        "Microsoft.AspNet.Http": "1.0.0-alpha3",
-        "Microsoft.AspNet.Hosting": "1.0.0-alpha3",
-        "Microsoft.AspNet.Server.WebListener": "1.0.0-alpha3",
-        "Microsoft.Framework.ConfigurationModel": "1.0.0-alpha3",
-        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-alpha3",
-        "Microsoft.Framework.DependencyInjection": "1.0.0-alpha3",
-        "Microsoft.AspNet.RequestContainer": "1.0.0-alpha3" /* UseServices extension method is inside this */
+  "name": "Kloggy.Web",
+  "authors": [
+    "Tugberk Ugurlu"
+  ],
+  "description": "New version of Bloggy which is written on KRuntime",
+  "version": "0.0.1-alpha-*",
+  "dependencies": {
+    "Kestrel": "1.0.0-*",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-*",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-*",
+    "Microsoft.AspNet.Mvc": "6.0.0-*",
+    "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
+    "Microsoft.AspNet.Http": "1.0.0-*",
+    "Microsoft.AspNet.Hosting": "1.0.0-*",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
+    "Microsoft.Framework.ConfigurationModel": "1.0.0-*",
+    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-*",
+    "Microsoft.Framework.DependencyInjection": "1.0.0-*",
+    "Microsoft.AspNet.RequestContainer": "1.0.0-*",
+    "Microsoft.Net.Http.Client": "1.0.0-*"
+  },
+  "commands": {
+    "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
+    "run": "run server.urls=http://localhost:5003",
+    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
+  },
+  "frameworks": {
+    "net45": {
     },
-    "commands": {
-        "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
-        "run": "run server.urls=http://localhost:5003",
-        "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
-    },
-    "frameworks": {
-        "net45": {
-            "dependencies": {
-            }
-        },
-        
-        "k10": {
-            "dependencies": {
-                "System.Collections": "4.0.0.0",
-                "System.Console": "4.0.0.0",
-                "System.IO": "4.0.0.0",
-                "System.Linq": "4.0.0.0",
-                "System.Runtime": "4.0.20.0",
-                "System.Threading.Tasks": "4.0.10.0"
-            }
-        }
+    "aspnetcore50": {
+      "dependencies": {
+        "System.Collections": "4.0.0.0",
+        "System.Console": "4.0.0.0",
+        "System.IO": "4.0.0.0",
+        "System.Linq": "4.0.0.0",
+        "System.Runtime": "4.0.20.0",
+        "System.Threading.Tasks": "4.0.10.0"
+      }
     }
+  }
 }
