added gulp tasks, added bower and npm packages, added bootswatch theme: cosmo

--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -26,7 +26,7 @@
     "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
   },
   "frameworks": {
-    "net45": {
+    "aspnet50": {
     },
     "aspnetcore50": {
       "dependencies": {
