--- a/src/KLoggy.Web/package.json
+++ b/src/KLoggy.Web/package.json
@@ -12,8 +12,12 @@
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
+    "gulp-gitshasuffix": "^0.2.0",
+    "gulp-if": "^1.2.4",
     "gulp-less": "^1.3.6",
     "gulp-minify-css": "^0.3.10",
+    "gulp-order": "^1.1.1",
+    "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1"
   }
 }
