--- a/src/KLoggy.Web/package.json
+++ b/src/KLoggy.Web/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "del": "^0.1.3",
+    "gitsha": "^0.1.0",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
     "gulp-gitshasuffix": "^0.2.0",
@@ -18,6 +19,8 @@
     "gulp-minify-css": "^0.3.10",
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "ini": "^1.3.0"
   }
 }
