--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -12,6 +12,7 @@
     "Microsoft.AspNet.Mvc": "6.0.0-*",
     "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
     "Microsoft.AspNet.Http": "1.0.0-*",
+    "Microsoft.AspNet.Mvc.Razor": "6.0.0-*",
     "Microsoft.AspNet.Hosting": "1.0.0-*",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
     "Microsoft.Framework.ConfigurationModel": "1.0.0-*",
