ignoring node_modules and bower_components folders for packing. added a release config file

--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -39,5 +39,9 @@
         "System.Threading.Tasks": "4.0.10.0"
       }
     }
-  }
+  },
+  "pack-exclude": [
+      "node_modules/",
+      "bower_components/"
+  ]
 }
