--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -1,26 +1,27 @@
 {
-  "name": "Kloggy.Web",
-  "authors": [
-    "Tugberk Ugurlu"
-  ],
-  "description": "New version of Bloggy which is written on KRuntime",
-  "version": "0.0.1-alpha-*",
-  "dependencies": {
-    "Kestrel": "1.0.0-*",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-*",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-*",
-    "Microsoft.AspNet.Mvc": "6.0.0-*",
-    "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
-    "Microsoft.AspNet.Http": "1.0.0-*",
-    "Microsoft.AspNet.Mvc.Razor": "6.0.0-*",
-    "Microsoft.AspNet.Hosting": "1.0.0-*",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
-    "Microsoft.Framework.ConfigurationModel": "1.0.0-*",
-    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-*",
-    "Microsoft.Framework.DependencyInjection": "1.0.0-*",
-    "Microsoft.AspNet.RequestContainer": "1.0.0-*",
-    "Microsoft.Net.Http.Client": "1.0.0-*"
-  },
+    "name": "Kloggy.Web",
+    "authors": [
+        "Tugberk Ugurlu"
+    ],
+    "description": "New version of Bloggy which is written on KRuntime",
+    "version": "0.0.1-alpha-*",
+    "dependencies": {
+        "KLoggy.Domain": "",
+        "Kestrel": "1.0.0-*",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-*",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-*",
+        "Microsoft.AspNet.Mvc": "6.0.0-*",
+        "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
+        "Microsoft.AspNet.Http": "1.0.0-*",
+        "Microsoft.AspNet.Mvc.Razor": "6.0.0-*",
+        "Microsoft.AspNet.Hosting": "1.0.0-*",
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
+        "Microsoft.Framework.ConfigurationModel": "1.0.0-*",
+        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-*",
+        "Microsoft.Framework.DependencyInjection": "1.0.0-*",
+        "Microsoft.AspNet.RequestContainer": "1.0.0-*",
+        "Microsoft.Net.Http.Client": "1.0.0-*"
+    },
   "commands": {
     "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
     "run": "run server.urls=http://localhost:5003",
