changed the frameworks of the class libs

--- a/src/KLoggy.Domain/project.json
+++ b/src/KLoggy.Domain/project.json
@@ -10,9 +10,14 @@
     },
 
     "frameworks": {
-        "aspnet50": { },
+        "net451": {
+            "dependencies": {
+                "Microsoft.Framework.Logging.Interfaces": "1.0.0-*"
+            }
+        },
         "aspnetcore50": { 
             "dependencies": {
+                "Microsoft.Framework.Logging.Interfaces": { "version": "1.0.0-*", "type": "build" },
                 "System.Collections": "4.0.0.0",
                 "System.Console": "4.0.0.0",
                 "System.IO": "4.0.0.0",
