updated for vs2015 preview

--- a/src/KLoggy.Wrappers.Akismet/project.json
+++ b/src/KLoggy.Wrappers.Akismet/project.json
@@ -17,13 +17,13 @@
         },
         "aspnetcore50": { 
             "dependencies": {
-                "System.Collections": "4.0.10.0",
-                "System.Console": "4.0.0.0",
-                "System.IO": "4.0.10.0",
-                "System.Linq": "4.0.0.0",
-                "System.Runtime": "4.0.20.0",
-                "System.Threading.Tasks": "4.0.10.0",
-                "System.Net.Http": "4.0.0.0"
+                "System.Collections": "",
+                "System.Console": "",
+                "System.IO": "",
+                "System.Linq": "",
+                "System.Runtime": "",
+                "System.Threading.Tasks": "",
+                "System.Net.Http": ""
             }
         }
     }
