--- a/src/KLoggy.Web/project.json
+++ b/src/KLoggy.Web/project.json
@@ -20,29 +20,30 @@
         "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-*",
         "Microsoft.Framework.DependencyInjection": "1.0.0-*",
         "Microsoft.AspNet.RequestContainer": "1.0.0-*",
-        "Microsoft.Net.Http.Client": "1.0.0-*"
+        "Microsoft.Net.Http.Client": "1.0.0-*",
+        "Microsoft.Framework.Logging.Interfaces": { "type": "build", "version": "1.0.0-*" }
     },
-  "commands": {
-    "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
-    "run": "run server.urls=http://localhost:5003",
-    "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
-  },
-  "frameworks": {
-    "aspnet50": {
+    "commands": {
+        "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002",
+        "run": "run server.urls=http://localhost:5003",
+        "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5004"
     },
-    "aspnetcore50": {
-      "dependencies": {
-        "System.Collections": "",
-        "System.Console": "",
-        "System.IO": "",
-        "System.Linq": "",
-        "System.Runtime": "",
-        "System.Threading.Tasks": ""
-      }
-    }
-  },
-  "packExclude": [
-      "node_modules/",
-      "bower_components/"
-  ]
+    "frameworks": {
+        "aspnet50": {
+        },
+        "aspnetcore50": {
+            "dependencies": {
+                "System.Collections": "",
+                "System.Console": "",
+                "System.IO": "",
+                "System.Linq": "",
+                "System.Runtime": "",
+                "System.Threading.Tasks": ""
+            }
+        }
+    },
+    "packExclude": [
+        "node_modules/",
+        "bower_components/"
+    ]
 }
